fix：修复漂浮hud显示问题，能量耗尽不退出问题，缓降有伤害问题，无法获取玩家实际标签问题